# code-merge-system

./: .coverage-baseline.json  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  README_zh.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
.multi-agent/eval-impl/: HANDOFF.md  HANDOFF_phase7_dispatch.md  facts.md
.multi-agent/large-scale-perf/: HANDOFF.md  facts.md
MERGE_RECORD/: MERGE_PLAN_upstream_main_0924299c.md  MERGE_PLAN_upstream_main_1ba67d49.md  MERGE_PLAN_upstream_main_1ece76f9.md  MERGE_PLAN_upstream_main_25e7f117.md  MERGE_PLAN_upstream_main_2ca3d2c8.md  MERGE_PLAN_upstream_main_2ea69c44.md  MERGE_PLAN_upstream_main_2f79a16c.md  MERGE_PLAN_upstream_main_4258a910.md  MERGE_PLAN_upstream_main_490e32c6.md  MERGE_PLAN_upstream_main_4c78546e.md  MERGE_PLAN_upstream_main_6a277a7f.md  MERGE_PLAN_upstream_main_76621929.md  MERGE_PLAN_upstream_main_76fe335f.md  MERGE_PLAN_upstream_main_7d9b3ce8.md  MERGE_PLAN_upstream_main_7f574f22.md  MERGE_PLAN_upstream_main_be079eed.md  MERGE_PLAN_upstream_main_c0997bde.md  MERGE_PLAN_upstream_main_c1a54975.md  MERGE_PLAN_upstream_main_cc333bf6.md  MERGE_PLAN_upstream_main_d75367b2.md  MERGE_PLAN_upstream_main_df654f05.md  MERGE_PLAN_upstream_main_e9bdd425.md  MERGE_PLAN_upstream_main_eeb87301.md  MERGE_PLAN_upstream_main_f2cbd6c5.md
config/: default.yaml  dify-plugins.yaml  workflows.yaml
doc/: README.md  architecture.md  context-management.md  enhanced-context-memory-proposal.md  flow.md  forks-profile-init.md  memory-system.md  migration-aware-merge.md  web-ui-redesign-handoff.md  web-ui.md
doc/bugfix/: 0527.md  0528-agent-prompt-engineering-review.md  0528-legacy-merge-base-attr.md  0529-context-memory-opt-evaluation.md
doc/evaluation/: EXECUTION_PLAN.md  IMPLEMENTATION_REPORT_PARTIAL.md  README.md  acceptance.md  dataset.md  golden.md  metrics.md  procedure.md
doc/execute/: implementation-notes.md
doc/modules/: agents.md  cli.md  core.md  data-models.md  forks-profile.md  llm.md  memory.md  onboarding.md  risk-levels.md  tools.md
doc/plan/: dead-code-remediation-and-compression-plan.md  large-scale-file-processing-optimization.md  merge-safety-complete.md  per-hunk-resolution.md  roadmap.md  self-learning-system.md  staged-context-processing.md
doc/references/: dependency-graph-optimization-plan.md  graphify-analysis.md  hermes-inspired-improvements.md  mempalace-analysis.md  multi-agent-optimization.md  openai-agents-python-analysis.md  opensource-comparison.md
doc/review/: 00-audit-findings.md  01-optimization-plan.md  02-implementation-log.md  03-production-readiness.md  04-production-hardening-plan.md  05-wave4-implementation-log.md  06-production-readiness-post-wave4.md  07-wave5-residual-closure-plan.md  README.md  confirmed-findings.txt
doc/share/: agent-engineering-sharing.md  dependency-graph-deep-dive.html
doc/test-report/: 2026-05-10-planner-judge-optimizations-review.md  dify-plugin-daemon.md  dify-plugins-upstream25-merge-test-2026-05-08.md  dify-plugins-upstream25-regression-2026-05-08.md  forgejo-c-class-test-branches-2026-05-18.md  forgejo-planner-judge-divergence-2026-05-18.md  handover-50-v2-rerun.md  insforge-v2.1.0-merge-report-2026-05-06.md  upstream-19-commits-test-report.md  upstream-29-full-flow-analysis.md  upstream-50-v2-rerun-test-report.md
docs/: web-ui-redesign-tests.md
scripts/eval/: __init__.py  _ast_equiv.py  _common.py  _fork_name_check.py  _golden.py  _ground_truth.py  _report_render.py  _schemas.py  build_golden.py  consistency.py  diff_against_golden.py  gate.py  git_bootstrap.py  lock.py  normalize_run_meta.py  prepare.py  run.py  run_r2.sh  run_tier1.sh  sample_import.py  summarize.py
src/agents/: __init__.py  base_agent.py  conflict_analyst_agent.py  contract.py  executor_agent.py  guardrails.py  human_interface_agent.py  judge_agent.py  memory_extractor_agent.py  planner_agent.py  planner_judge_agent.py  registry.py
src/cli/: decisions_loader.py  main.py  paths.py  preflight.py
src/core/: __init__.py  checkpoint.py  coordinator.py  hooks.py  message_bus.py  orchestrator.py  parallel_file_runner.py  phase_runner.py  read_only_state_view.py  state_machine.py  workflow_loader.py
src/llm/: __init__.py  chunker.py  client.py  connectivity.py  context.py  context_compressor.py  credential_pool.py  error_classifier.py  prompt_builders.py  prompt_caching.py  rationale_sanitizer.py  relevance.py  response_parser.py  retry_utils.py  structured_schemas.py
src/memory/: bootstrap.py  content_quality.py  hit_tracker.py  layered_loader.py  models.py  sqlite_store.py  store.py  summarizer.py
src/models/: __init__.py  config.py  conflict.py  decision.py  decisions_bundle.py  dependency.py  diff.py  dispute.py  forks_profile.py  human.py  judge.py  memory_effectiveness.py  message.py  plan.py  plan_judge.py  plan_review.py  setup.py  state.py  (+1 more)
tui/: package-lock.json  package.json  tsconfig.json
web/: index.html  package-lock.json  package.json  vite.config.ts
(+788 files in other folders)
