[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-merge-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "gitpython>=3.1",
    "unidiff>=0.7",
    "anthropic>=0.40",
    "openai>=1.50",
    "tenacity>=8.2",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "websockets>=14.0",
    "platformdirs>=4.0",
]

[project.scripts]
merge = "src.cli.main:cli"

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.24",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/web/*",
    "src/cli/*",
    "src/integrations/*",
    "src/tools/chunk_processor.py",
    "src/tools/merge_plan_report.py",
    "src/tools/git_tool.py",
    "src/tools/commit_replayer.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "."
explicit_package_bases = true
