[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-merge-system"
version = "0.1.0"
description = "AI-powered code merge agent with browser UI — plan, review, and resolve conflicts across long fork histories"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Angel", email = "angel.gosick@gmail.com" }]
keywords = ["merge", "git", "ai", "llm", "code-review", "conflict-resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "gitpython>=3.1",
    "unidiff>=0.7",
    "anthropic>=0.40",
    "openai>=1.50",
    "tenacity>=8.2",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "websockets>=14.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/GOSICK-Angel/code-merge-system"
Repository = "https://github.com/GOSICK-Angel/code-merge-system"
Issues = "https://github.com/GOSICK-Angel/code-merge-system/issues"

[project.scripts]
merge = "src.cli.main:cli"

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.24",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
source = ["src"]
omit = [
    "src/cli/*",
    "src/integrations/*",
    "src/tools/chunk_processor.py",
    "src/tools/merge_plan_report.py",
    "src/tools/git_tool.py",
    "src/tools/commit_replayer.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Bundle the built Web UI assets into the wheel under src/web/dist so that
# ``importlib.resources.files("src.web") / "dist"`` resolves at runtime
# regardless of install mode. The CI ``web-build`` job runs ``npm run
# build`` to produce ``web/dist/`` before the Python package is built.
[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "src/web/dist"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "."
explicit_package_bases = true
